--- a/frps_full.ini
+++ b/frps_full.ini
@@ -4,7 +4,7 @@
 # in square brackets, as in "[::1]:80", "[ipv6-host]:http" or "[ipv6-host%zone]:80"
 # For single "bind_addr" field, no need square brackets, like "bind_addr = ::".
 bind_addr = 0.0.0.0
-bind_port = 7000
+bind_port = 5443
 
 # udp port used for kcp protocol, it can be same with 'bind_port'.
 # if not set, kcp is disabled in frps.
@@ -42,11 +42,11 @@ vhost_https_port = 443
 # dashboard_addr's default value is same with bind_addr
 # dashboard is available only if dashboard_port is set
 dashboard_addr = 0.0.0.0
-dashboard_port = 7500
+dashboard_port = 6443
 
 # dashboard user and passwd for basic auth protect
 dashboard_user = admin
-dashboard_pwd = admin
+dashboard_pwd = 991014
 
 # dashboard TLS mode
 dashboard_tls_mode = false
@@ -85,7 +85,7 @@ authenticate_heartbeats = false
 authenticate_new_work_conns = false
 
 # auth token
-token = 12345678
+token = 991014
 
 # oidc_issuer specifies the issuer to verify OIDC tokens with.
 # By default, this value is "".
@@ -112,7 +112,7 @@ oidc_skip_issuer_check = false
 # user_conn_timeout = 10
 
 # only allow frpc to bind ports you list, if you set nothing, there won't be any limit
-allow_ports = 2000-3000,3001,3003,4000-50000
+allow_ports =
 
 # pool_count in each proxy will change to max_pool_count if they exceed the maximum value
 max_pool_count = 5
