--- a/frps.ini
+++ b/frps.ini
@@ -129,7 +129,7 @@ tls_only = false
 
 # if subdomain_host is not empty, you can set subdomain when type is http or https in frpc's configure file
 # when subdomain is test, the host used by routing is test.frps.com
-subdomain_host = frps.com
+subdomain_host = frp.686898.xyz
 
 # if tcp stream multiplexing is used, default is true
 # tcp_mux = true
