--- a/frps.ini
+++ b/frps.ini
@@ -3,7 +3,7 @@
 # A literal address or host name for IPv6 must be enclosed
 # in square brackets, as in "[::1]:80", "[ipv6-host]:http" or "[ipv6-host%zone]:80"
 # For single "bind_addr" field, no need square brackets, like "bind_addr = ::".
-bind_addr = 0.0.0.0
+bind_addr = 82.157.155.156
 bind_port = 5443
 
 # udp port used for kcp protocol, it can be same with 'bind_port'.
@@ -41,7 +41,7 @@ vhost_https_port = 443
 # set dashboard_addr and dashboard_port to view dashboard of frps
 # dashboard_addr's default value is same with bind_addr
 # dashboard is available only if dashboard_port is set
-dashboard_addr = 0.0.0.0
+dashboard_addr = 82.157.155.156
 dashboard_port = 6443
 
 # dashboard user and passwd for basic auth protect
@@ -79,10 +79,10 @@ detailed_errors_to_client = true
 authentication_method = token
 
 # authenticate_heartbeats specifies whether to include authentication token in heartbeats sent to frps. By default, this value is false.
-authenticate_heartbeats = false
+authenticate_heartbeats = true
 
 # AuthenticateNewWorkConns specifies whether to include authentication token in new work connections sent to frps. By default, this value is false.
-authenticate_new_work_conns = false
+authenticate_new_work_conns = true
 
 # auth token
 token = 991014
@@ -132,7 +132,7 @@ tls_only = false
 subdomain_host = 
 
 # if tcp stream multiplexing is used, default is true
-# tcp_mux = true
+tcp_mux = true
 
 # specify keep alive interval for tcp mux.
 # only valid if tcp_mux is true.
@@ -140,7 +140,7 @@ subdomain_host =
 
 # tcp_keepalive specifies the interval between keep-alive probes for an active network connection between frpc and frps.
 # If negative, keep-alive probes are disabled.
-# tcp_keepalive = 7200
+tcp_keepalive = 7200
 
 # custom 404 page for HTTP requests
 # custom_404_page = /path/to/404.html
