--- a/frps.ini
+++ b/frps.ini
@@ -79,29 +79,29 @@ detailed_errors_to_client = true
 authentication_method = token
 
 # authenticate_heartbeats specifies whether to include authentication token in heartbeats sent to frps. By default, this value is false.
-authenticate_heartbeats = true
+# authenticate_heartbeats = true
 
 # AuthenticateNewWorkConns specifies whether to include authentication token in new work connections sent to frps. By default, this value is false.
-authenticate_new_work_conns = true
+# authenticate_new_work_conns = true
 
 # auth token
 token = 991014
 
 # oidc_issuer specifies the issuer to verify OIDC tokens with.
 # By default, this value is "".
-oidc_issuer =
+# oidc_issuer =
 
 # oidc_audience specifies the audience OIDC tokens should contain when validated.
 # By default, this value is "".
-oidc_audience =
+# oidc_audience =
 
 # oidc_skip_expiry_check specifies whether to skip checking if the OIDC token is expired.
 # By default, this value is false.
-oidc_skip_expiry_check = false
+# oidc_skip_expiry_check = false
 
 # oidc_skip_issuer_check specifies whether to skip checking if the OIDC token's issuer claim matches the issuer specified in OidcIssuer.
 # By default, this value is false.
-oidc_skip_issuer_check = false
+# oidc_skip_issuer_check = false
 
 # heartbeat configure, it's not recommended to modify the default value
 # the default value of heartbeat_timeout is 90. Set negative value to disable it.
@@ -115,7 +115,7 @@ oidc_skip_issuer_check = false
 allow_ports =
 
 # pool_count in each proxy will change to max_pool_count if they exceed the maximum value
-max_pool_count = 5
+# max_pool_count = 5
 
 # max ports can be used for each client, default value is 0 means no limit
 max_ports_per_client = 0
@@ -129,7 +129,7 @@ tls_only = false
 
 # if subdomain_host is not empty, you can set subdomain when type is http or https in frpc's configure file
 # when subdomain is test, the host used by routing is test.frps.com
-subdomain_host = 
+# subdomain_host = 
 
 # if tcp stream multiplexing is used, default is true
 tcp_mux = true
@@ -152,8 +152,8 @@ udp_packet_size = 1500
 
 # Enable golang pprof handlers in dashboard listener.
 # Dashboard port must be set first
-pprof_enable = false
+# pprof_enable = false
 
 # Retention time for NAT hole punching strategy data.
-nat_hole_analysis_data_reserve_hours = 168
+# nat_hole_analysis_data_reserve_hours = 168
 
